<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RoutineEditActivity">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/add"
        android:icon="@drawable/add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_timer"
        android:orderInCategory="200"
        android:title="@string/timer"
        android:icon="@drawable/timer"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_finished"
        android:orderInCategory="300"
        android:title="@string/finished"
        android:icon="@drawable/done"
        app:showAsAction="ifRoom"/>
</menu>
