<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/settings_description"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintVertical_bias="1.0"
        android:gravity="center_horizontal"
        android:padding="20dp"
        >

        <Button
            android:id="@+id/routines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openRoutines"
            android:text="@string/button_routines" />

        <Button
            android:id="@+id/exercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openExercises"
            android:text="@string/button_exercises" />

<!--        <Button
            android:id="@+id/stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_stats"
            />-->

    </LinearLayout>


    <!--    <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="125dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>