<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/text1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5sp"
    android:paddingStart="20sp"
    android:paddingEnd="10sp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textViewLiftName"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Bicep Curl"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/weight"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/weight"
                android:textSize="15sp"
                android:paddingStart="5dp"/>

            <TextView
                android:id="@+id/reps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/reps"
                android:textSize="15sp"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/remove"
                android:textSize="15sp"
                android:paddingEnd="30dp"
                />

            <TextView
                android:id="@+id/completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/complete"
                android:textSize="15sp"
                />

        </LinearLayout>

        <!--        <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/the_lifts"
                    >

          &lt;!&ndash;      Just here for reference/designing
                    <include
                    android:id="@+id/lift_set"
                    layout="@layout/lift_set" />&ndash;&gt;

                </LinearLayout>-->


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lift_items_recycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/add_set_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="Add Set"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</LinearLayout>
